--- a/spacetrooper_privacy.html
+++ b/spacetrooper_privacy.html
@@ -1,9 +1,89 @@
-Privacy Policy for SpaceTrooper
+# Privacy Policy for Space Trooper Game
 
-This game (“SpaceTrooper”) does not collect, store, or share any personal information.
+**Effective Date:** August 24, 2025  
+**Last Updated:** August 24, 2025  
+**Game Version:** v1.0
 
-We use Google AdMob to serve ads. AdMob may collect and use certain data to display personalized ads. Please review Google’s Privacy & Terms to understand what data is collected.
+## About This Policy
 
-If you are under the age of 13, we do not knowingly collect or solicit any personal information. The app is designed with child safety in mind and complies with applicable policies.
+This Privacy Policy explains our data practices for Space Trooper on Android devices. Our game is designed to be safe and fun for players of all ages, including children.
 
-For any questions or concerns, contact us directly.
+**Important: Space Trooper is a completely offline game. We do not collect any personal information from players. The game can be played entirely without an internet connection.**
+
+## Information We Collect
+
+**We do not collect any personal information.** Space Trooper is designed to work completely offline without any network connection required.
+
+### What We Do NOT Collect:
+- No personal information of any kind
+- No device identifiers or tracking data
+- No game progress data sent to servers
+- No crash reports or analytics
+- No location data
+- No names, addresses, or contact information
+- No photos, videos, or camera access
+- No contact lists or personal messages
+- No social media information
+
+## How We Use Information
+
+Since we do not collect any information, there is no data usage to describe. Your game progress and settings are stored only on your device and never transmitted anywhere.
+
+## Children Under 13
+
+Since we do not collect any information, there are no privacy concerns for children. The game is completely safe for children to play offline.
+
+### For Parents:
+- No personal information is collected from your child
+- No internet connection is required to play
+- All game data stays on your device
+- No account creation or registration needed
+
+### Contact for Parents:
+If you have any questions about the game's privacy practices, email us at **powerkomputing@gmail.com**
+
+## Data Security
+
+Since we do not collect any personal information, there is no personal data to secure. All game data remains on your device only.
+
+## Information Sharing
+
+We do not collect any information, so there is nothing to share with third parties.
+
+## Data Storage
+
+- All game progress is stored only on your device
+- No data is transmitted to external servers
+- No personal information is stored anywhere
+- Uninstalling the app removes all game data
+
+## Third-Party Services
+
+Space Trooper does not use any third-party services that collect data. The game operates completely independently on your device.
+
+## In-App Purchases
+
+Space Trooper does not include any in-app purchases or payment systems.
+
+## Advertising
+
+Space Trooper does not display any advertisements.
+
+## Changes to This Policy
+
+We may update this policy from time to time. Important changes will be communicated through the game or app store updates.
+
+## Contact Us
+
+For any privacy questions or concerns:
+
+**Email:** powerkomputing@gmail.com
+
+For parents with questions, please include "Parent Inquiry" in your email subject line.
+
+---
+
+**Important:** This privacy policy applies only to Space Trooper. Other apps and websites have their own privacy practices.
+
+**Game Version:** v1.0  
+**Policy Version:** 1.0
